# ros_gk

tank_rocket/launch/: tank_rocket_model.launch
tank_rocket/rviz/: tank_rocket.rviz
tank_rocket/src/tank_rocket/: CMakeLists.txt
tank_rocket/src/tank_rocket/config/: mecanum_controller.yaml
tank_rocket/src/tank_rocket/launch/: tank_rocket_model.launch
tank_rocket/src/tank_rocket/rviz/: tank_rocket.rviz
tank_rocket/src/tank_rocket/src/: mecanum_drive_plugin.cpp  tank_rocket_control.cpp
tank_rocket/src/tank_rocket/xacro/: master.xacro
tank_rocket/src/tank_rocket/xacro/gazebo/: gazebo.xacro
tank_rocket/src/tank_rocket/xacro/model/: model.xacro
tank_rocket/urdf/xacro/: gazebo.xacro  master.xacro  model.xacro
